[gd_scene load_steps=9 format=3 uid="uid://c1ekr4qs5l516"]

[ext_resource type="Script" uid="uid://bdn6kp0ldq1ck" path="res://Main/Scripts/main_stream.gd" id="1_sw3on"]
[ext_resource type="Script" uid="uid://b6atx7ybrp5sq" path="res://Main/Scripts/SpritesContainer.gd" id="1_u32ad"]
[ext_resource type="PackedScene" uid="uid://dw4brgrpdpurf" path="res://Misc/LightSource/light_source.tscn" id="2_cj4vf"]
[ext_resource type="Texture2D" uid="uid://c23flfaie3uxb" path="res://Misc/TestAssets/32x32grid.png" id="2_sw3on"]
[ext_resource type="PackedScene" uid="uid://cnq8tddqwvy07" path="res://UI/StreamUI/stream_ui.tscn" id="5_h43to"]
[ext_resource type="Script" uid="uid://by4pbr6yeut1c" path="res://Main/Scripts/monitor_tracking.gd" id="5_me1oy"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xfo8l"]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sw3on"]
blend_mode = 4

[node name="MainStream" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sw3on")

[node name="BG" type="TextureRect" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.0980392)
z_index = -999
z_as_relative = false
material = SubResource("CanvasItemMaterial_xfo8l")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_sw3on")
expand_mode = 1
stretch_mode = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_sw3on")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
stretch = true
mouse_target = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Node2D" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(640, 360)

[node name="CamPos" type="Node2D" parent="SubViewportContainer/SubViewport/Node2D"]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="SubViewportContainer/SubViewport/Node2D/CamPos"]
unique_name_in_owner = true
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="Origin" type="Node2D" parent="SubViewportContainer/SubViewport/Node2D"]
z_index = 4
texture_filter = 4

[node name="SpritesContainer" type="Node2D" parent="SubViewportContainer/SubViewport/Node2D/Origin"]
unique_name_in_owner = true
script = ExtResource("1_u32ad")

[node name="LightSource" parent="SubViewportContainer/SubViewport/Node2D" instance=ExtResource("2_cj4vf")]
unique_name_in_owner = true
visible = false
light_mask = 7
visibility_layer = 7
z_index = 4096
z_as_relative = false
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.92549)

[node name="UICanvas" type="CanvasLayer" parent="."]

[node name="Marker" type="Control" parent="UICanvas"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("5_me1oy")

[node name="UI" parent="UICanvas" instance=ExtResource("5_h43to")]
unique_name_in_owner = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open File(s)"
initial_position = 2
size = Vector2i(800, 500)
force_native = true
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.png", "*.jpeg", "*.jpg", "*.svg")
use_native_dialog = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="mouse_entered" from="SubViewportContainer" to="." method="_on_sub_viewport_container_mouse_entered"]
[connection signal="mouse_exited" from="SubViewportContainer" to="." method="_on_sub_viewport_container_mouse_exited"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
